HelloUltraviolet/Fixtures/RejectedSource/Expressions/SyncOperandYields/Expected.uv
//! Expected diagnostic metadata for the SyncOperandYields rejected-source specimen.

expectedDiagnostic("E-CON-0251", "rule.21.Sync-Out-Err")
